add ngResource to consume express API

--- a/client/app/partials/standards/index.html
+++ b/client/app/partials/standards/index.html
@@ -4,7 +4,7 @@
   <div class="standard_detail" ng-repeat="standard in standards">
     {{standard.title}}
     <span>
-      <a href="#">view</a>
+      <a href="/standards/{{standard.id}}">view</a>
     </span>
   </div>
 </div>
