index and view pages for standards

--- a/client/app/partials/standards/show.html
+++ b/client/app/partials/standards/show.html
@@ -1,8 +1,5 @@
-<h5>One standard</h5>
-
+<h5>{{standard.title}}</h5>
   <div class="standard_detail">
-    routeParams: 
-    {{routeParams}}
     <span>
       <a href="#">edit</a>
     </span>
