add routes to create from angular front end

--- a/client/app/partials/standards/index.html
+++ b/client/app/partials/standards/index.html
@@ -1,4 +1,4 @@
-<h5>Standards</h5>
+<h3>All Standards</h3>
 
 <div class="standards_collection">
   <div class="standard_detail" ng-repeat="standard in standards">
