begin login process

--- a/client/app/partials/standards/new.html
+++ b/client/app/partials/standards/new.html
@@ -1,5 +1,5 @@
 
-<form>
+<form ng-submit="addStandard()">
    <input ng-model="standard.title" type="text" name="title" value="" placeholder="title" />
-   <input type="submit" name="submit" value="superman" ng-click="addStandard()">
+   <input type="submit" name="submit" value="create standard">
 </form>
