add $resource and delete functionality for Topic

--- a/client/app/partials/topics/index.html
+++ b/client/app/partials/topics/index.html
@@ -6,6 +6,6 @@
        <td>{{topic.name}}</td>
        <td>{{topic.short_name}}</td>
        <td><a href="#"> edit </a></td>
-       <td><a href="#"> delete </a></td>
+       <td><a href="#" ng-click="deleteTopic(topic.id)"> delete </a></td>
   </tr>
 </table>
