--- a/client/app/partials/topics/index.html
+++ b/client/app/partials/topics/index.html
@@ -1,4 +1,6 @@
 
+<a href="topics/new">New Topic</a>
+<br>
 
 <table class="topic_table">
   <tr><th>name</th><th>short name</th><th></th><th></th></tr>
